--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt build && nuxt start",
+    "start": "nuxt build && node server.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/bulma": "^1.2.6",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "latest",
-    "source-map-support": "^0.4.18"
+    "socket.io": "^2.3.0",
+    "source-map-support": "^0.4.18",
+    "vue-youtube": "^1.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^5.2.1",
