--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt": "latest",
     "socket.io": "^2.3.0",
     "source-map-support": "^0.4.18",
+    "timesync": "^1.0.4",
     "vue-youtube": "^1.4.0"
   },
   "devDependencies": {
